cmake_minimum_required(VERSION 2.8)
project(Game)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

file(GLOB_RECURSE SOURCES "src/*.cpp")

add_executable(Game ${SOURCES})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
pkg_check_modules(SDL2 REQUIRED sdl2)

PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL_ttf)
PKG_CHECK_MODULES(SDL2TTF REQUIRED SDL_ttf)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2TTF_LIBRARIES})
